--- a/.github/workflows/upload-python-package.yml
+++ b/.github/workflows/upload-python-package.yml
@@ -1,28 +1,30 @@
-name: Upload Python Package
+name: Publish Python Package
 
 on:
   push:
     tags:
-      - 'v*.*.*'    # triggers workflow only when a tag like v0.1.0 is pushed
+      - 'v*.*.*'  # triggers on version tags like v0.1.0, v1.2.3, etc.
 
 jobs:
   build-and-publish:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v3
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.x'
+          python-version: '3.10'
+
       - name: Install build tools
-        run: |
-          python -m pip install --upgrade build twine
-      - name: Build the package
-        run: |
-          python -m build
-      - name: Publish to PyPI
+        run: pip install build twine
+
+      - name: Build package
+        run: python -m build
+
+      - name: Publish package to PyPI
         env:
-          TWINE_USERNAME: __token__
-          TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
-        run: |
-          python -m twine upload dist/*
+          TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
+          TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+        run: twine upload dist/*
